<resources>
    <string name="app_name">Task Master Pro</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="add_new_task">Add new task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="no_tasks_yet_click_the_button_to_add_a_new_task">No tasks yet. Click the + button to add a new task!</string>
    <string name="menu_sort_alphabetical">Sort by Name</string>
    <string name="menu_sort_priority">Sort by Priority</string>
    <string name="menu_sort_date">Sort by Due Date</string>
    <string name="menu_show_complete">Show Completed</string>
    <string name="menu_show_incomplete">Show Incomplete</string>
    <string name="menu_show_all">Show All</string>
    <string name="menu_clear_all">Clear All Tasks</string>
    <string name="task_item">Task Item</string>
    <string name="search">Search</string>
    <string name="clear_all_tasks">Clear All Tasks</string>
    <string name="sort">Sort</string>
    <string name="by_title">By Title</string>
    <string name="by_priority">By Priority</string>
    <string name="by_due_date">By Due Date</string>
    <string name="filter">Filter</string>
    <string name="all_tasks">All Tasks</string>
    <string name="incomplete_tasks">Incomplete Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="todo">TODO</string>
    <string name="search_tasks">Search tasks</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="_0">0</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="TODO">ToDO</string>
    <string name="backup_and_security">Backup and Security</string>
</resources>